# AISD2021

./: CMakeLists.txt
1/deck/: deck.c  deck.h  tests.c
1/queue/: queue.c  queue.h  tests.c
1/stack/: stack.c  stack.h  tests.c
2/hashTable/: hashTable.c  hashTable.h  tests.c
2/sortTable/: sortTable.c  sortTable.h  tests.c
2/viewTable/: tests.c  viewTable.c  viewTable.h
3/avlTree/: AVLtree.c  AVLtree.h  TestGR.txt  main4b.c  test.txt
3/binaryTree/: Tree.c  Tree.h  main4.c  test.txt
4/heap/: Heap.c  Heap.h  main6.c  queue.c
4/skipList/: skipList.c  skipList.h  tests.c
5/graph/: Graph.c  Graph.h  main5.c  queue.c
